syntax = "proto3";

package health_checks;

import "google/protobuf/empty.proto";

option go_package="github.com/aristat/golang-example-app/health_checks";

service HealthChecks {
    rpc IsAlive (google.protobuf.Empty) returns (IsAliveOut) {
    }
}

message IsAliveOut {
    enum Status {
        OK = 0;
        NOT_OK = 2;
    }
    Status status = 1;
}
